<resources>
    <string name="app_name">Blood Relations</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="error">Error</string>
    <string name="please_wait">Please wait</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>


    <string name="action_sign_in">Sign in to Websites.co.in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>

    <string name="no_account">No account yet?</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing emailid
        completions."
    </string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="locate">Locate</string>
    <string name="form">Form</string>
    <string name="language">Language</string>
    <string name="faqs">FAQs</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="bloodbank_details">BloodBank Details</string>
    <string name="title_activity_locate">Map</string>
    <string name="prompt_name">Name</string>
    <string name="submit_form">Submit Form</string>
    <string name="app_settings">App settings</string>
    <string name="blood_bank_name">BLOOD BANK NAME</string>
    <string name="location">Location</string>
    <string name="whole_blood_wb">WHOLE BLOOD (WB)</string>
    <string name="opositive">O+</string>
    <string name="onegative">O-</string>
    <string name="blood_group">Blood Group:</string>
    <string name="quantity">Quantity</string>
    <string name="submit">Submit</string>
    <string name="subject_hint">Subject</string>
    <string name="_10">10</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="rating">Rating</string>
    <string name="_1_occupation">1. Occupation</string>
    <string name="_2_have_you_had_a_blood_transfusion">2. Have you had a blood transfusion?</string>
    <string name="_3_have_you_had_any_vaccinations_or_other_shots">3. Have you had any vaccinations or other shots?</string>
    <string name="have_you_ever">Have you ever</string>
    <string name="_4_had_jaundice_hepatitis">4. Had Jaundice/Hepatitis</string>
    <string name="_5_had_a_positive_test_for_hiv_hbsag_hcv">5. Had a positive test for HIV/HbSAg/HCV?</string>
    <string name="_6_had_any_cardiac_lung_problems">6. Had any cardiac/lung problems?</string>
    <string name="_7_had_a_bleeding_condition_or_blood_disease">7. Had a bleeding condition or blood disease?</string>
    <string name="_8_do_you_have_hypertension_or_blood_disease">8. Do you have hypertension or blood disease</string>
    <string name="yes_rb">Yes</string>
    <string name="no_rb">No</string>
    <string name="in_the_past_6_months">In the past 6 months</string>
    <string name="send_a_request">Send a request</string>
    <string name="name_profile">Name</string>
    <string name="surname_profile">Surname</string>
    <string name="phone_no_profile">Phone No</string>
    <string name="blood_group_profile">Blood Group</string>
    <string name="enter_address">Address</string>
    <string name="birthday">Birthday</string>
    <string name="name_of_poc">Name of POC</string>
    <string name="surname_of_poc">Surname of POC</string>
    <string name="blood_bank_name_profile">Blood Bank Name</string>
    <string name="phone">Phone</string>
    <string name="use_a_dark_theme">Use a dark theme</string>
    <string name="show_push_notifications">Show push notifications</string>
    <string name="sign_up">SIGN UP</string>
    <string name="are_you_a_blood_bank">Are You A Blood Bank ?</string>
    <string name="blood_bank_location">Blood Bank Location</string>
    <string name="blood_bank_phone">Blood Bank Phone</string>
    <string name="donor_name">Donor Name</string>
    <string name="donor_location">Donor Location</string>
    <string name="donor_blood_group">Donor Blood Group</string>
    <string name="certificate">Certificate</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="save">save</string>
    <string name="backpress">Please fill all fields</string>
    <string name="no_network">No internet connectivity. Features might be limited</string>
    <string name="change_language">Change language</string>
    <string name="language_settings">Currently only English and Hindi are supported</string>




    <string name="license_aosp" translatable="false">
        Copyright © 2011 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
    </string>
    <string name="logout">Logout</string>
    <string name="emergency">Emergency</string>
    <string name="about_app">Blood Bank developed for Smart India Hackathon</string>
    <string name="github">https://github.com/TheDorkKnightRises/BloodRelations.git</string>
    <string name="about">About</string>


    <!--Libraries-->
    <string name="picasso_name">Picasso</string>
    <string name="picasso_author">Square, Inc.</string>
    <string name="picasso_description">A powerful image downloading and caching library for Android.</string>
    <string name="picasso_license">Licensed under Apache License 2.0</string>
    <string name="picasso_copyright">&#169; 2013 Square, Inc.</string>

    <string name="circular_image_view_name">Circular ImageView</string>
    <string name="circular_image_view_author">Henning Dodenhof</string>
    <string name="circular_image_view_description">A circular ImageView for Android.</string>
    <string name="circular_image_view_license">Licensed under Apache License 2.0</string>
    <string name="circular_image_view_copyright">&#169; 2016 Henning Dodenhof</string>

    <string name="circle_indicator_name">CircleIndicator</string>
    <string name="circle_indicator_author">Relex</string>
    <string name="circle_indicator_description">A lightweight ViewPager indicator like in the Nexus 5 launcher.</string>
    <string name="circle_indicator_license">Licensed under Apache License 2.0</string>
    <string name="circle_indicator_copyright">&#169; 2014 Relex</string>

    <string name="android_support">Android Support Libraries</string>
    <string name="android_support_author">Google Inc.</string>
    <string name="android_support_license">Licensed under Apache License 2.0</string>
    <string name="android_support_copyright">&#169; 2016 Google Inc.</string>

    <string name="app_description">An open source application for the annual technical festival of Sardar Patel Institute of Technology.</string>
    <string name="app_licence">Licensed under the MIT license</string>
    <string name="app_copyright">&#169; 2016 Sardar Patel Institute of Technology</string>
    <string name="aboutapp">About</string>
    <string name="date">15th and 16th Feb 2017</string>
    <string name="firebase_libraries">Firebase Libraries</string>
    <string name="firebase_about">Mobile backend that supports Analytics, Cloud Messaging, Authentication, Realtime Database, Storage, Notifications and much more.</string>
    <string name="google_play_services">Google Play Services</string>
    <string name="play_services_about">Maps and Places API</string>

    <string name="your_emergency_contact">Custom emergency contact</string>
    <string name="default_emergency">18001801104 (default)</string>
    <string name="ok">OK</string>
    <string name="form_verify">Please go to your nearest blood bank to verify that you are fit for donating</string>
    <string name="take_to_map">Take me to the map</string>
    <string name="blacklist">Sorry you are unfit to donate blood. Please visit the nearest blood bank for further checks and advice</string>
</resources>
